[package]
name = "awsctx"
version = "0.2.2"
edition = "2024"
description = "Switch AWS SSO profiles in the current shell"
license = "MIT"
repository = "https://github.com/lemtoc/awsctx"
homepage = "https://github.com/lemtoc/awsctx"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ini_core = "0.2"
inquire = { version = "0.9", features = ["fuzzy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
